gcc/testsuite/rust/rustc/ui/parser/issue-32214.rs
trait Trait<T> { type Item; }

pub fn test<W, I: Trait<Item=(), W> >() {}
// { dg-error "" "" { target *-*-* } .-1 }

fn main() { }

